Add swagger config
