# src/main/resources/static/api.yaml
@@ -71,9 +71,9 @@ paths:
     post:
       tags:
         - Categories
-      summary: Updates a category
+      summary: Inserts a category
       description: ''
-      operationId: updateCategoryWithForm
+      operationId: insertCategory
       parameters:
         - name: user-id
           in: path
@@ -83,7 +83,7 @@ paths:
             type: integer
             format: int64
       requestBody:
-        description: Update an existent category
+        description: Inserts a category
         content:
           application/json:
             schema:
@@ -218,7 +218,7 @@ paths:
             format: int64
       responses:
         '400':
-          description: Invalid category value
+          description: Invalid  id category value
             
   /user/{user-id}/items:
     get:
